--- a/djangosite/home/templates/home/index.html
+++ b/djangosite/home/templates/home/index.html
@@ -1,13 +1,20 @@
 {% extends 'home/layout.html' %} {% block content %}
 {% load my_filters %}
+
+<form action="" method="get">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Submit" />
+</form>
+
 <h4 class="center-align blue lighten-3">{{ title }}</h4>
 
 {% for result in results %}
     {% with max_font=result.data.0.1 %}
         <h3>{{ result.title }}</h3>
         {% for word in result.data %}
-            <!-- <span style="font-size:{{ word.1|rel_font:max_font }}px">{{ word.0 }}({{ word.1 }})</span> -->
-            <span>{{ word.0 }}({{ word.1 }})</span>
+            <span style="font-size:{{ word.1|rel_font:max_font }}px">{{ word.0 }}({{ word.1 }}) </span>
+            <!-- <span>{{ word.0 }}({{ word.1 }})</span> -->
         {% endfor %}
     {% endwith %}
 {% endfor %}
