--- a/djangosite/home/templates/home/layout.html
+++ b/djangosite/home/templates/home/layout.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <title>Python Job Posts</title>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"> -->
+    <title>Tech Job Post Analysis</title>
     <style>
         h3 { text-decoration: underline; }
     </style>
@@ -14,12 +14,12 @@
 
 <body>
     <header class="container center-align">
-        <h3>Python Job Posts</h3>
+        <h3>Tech Job Post Analysis</h3>
     </header>
     <div class="container">
         {% block content %} {% endblock %}
         <br>
-        <a style="display:block" class="center-align" href="/admin">Admin Login</a>
+        <!-- <a style="display:block" class="center-align" href="/admin">Admin Login</a> -->
     </div>
 </body>
 
