added django models for scraper control

--- a/djangosite/home/templates/home/index.html
+++ b/djangosite/home/templates/home/index.html
@@ -1,4 +1,6 @@
-{% extends 'home/layout.html' %} {% block content %}
+{% extends 'home/layout.html' %}
+{% block content %}
+
 {% load my_filters %}
 
 <form action="" method="get">
