--- a/djangosite/home/templates/home/layout.html
+++ b/djangosite/home/templates/home/layout.html
@@ -18,9 +18,13 @@
     </header>
     <div class="container">
         {% block content %} {% endblock %}
-        <br>
-        <!-- <a style="display:block" class="center-align" href="/admin">Admin Login</a> -->
-    </div>
+        <br><br>
+        <!-- Footer -->
+        <a class="center-align" href="/">Query Jobposts</a> |
+        <a class="center-align" href="/scraper">Scraper</a> |
+        <a class="center-align" href="/skills">Skills</a> |
+        <a class="center-align" href="/admin">Admin</a>
+        </div>
 </body>
 
 </html>
