--- a/djangosite/home/templates/home/scraper.html
+++ b/djangosite/home/templates/home/scraper.html
@@ -9,6 +9,14 @@
 </form>
 
 <br><br>
+Current Tasks <small>(from celery app.control.inspect)</small>:
+<ul>
+    {% for task in tasks %}
+        <li>{{ task.status }}: {{ task.name }}, kwargs: {{ task.kwargs }}</li>
+    {% endfor %}
+</ul>
+
+<br><br>
 Recent Completed Scrapes <small>(from django_celery_results TaskResults)</small>:
 <ul>
     {% for res in results %}
