--- a/djangosite/home/templates/home/skills.html
+++ b/djangosite/home/templates/home/skills.html
@@ -1,4 +1,4 @@
-{% extends 'home/layout.html' %}
+{% extends 'home/base.html' %}
 {% block content %}
 
 <!-- <p>Update skills by getting most popular Stackoverflow tags:</p> -->
