--- a/djangosite/home/templates/home/base.html
+++ b/djangosite/home/templates/home/base.html
@@ -15,6 +15,7 @@
     table, th, td {
       border: 1px solid gray;
       border-collapse: collapse;
+      padding: 1px 3px 0px 3px;
     }
   </style>
 </head>
