added celery service and wordcloud library

--- a/djangosite/home/templates/home/base.html
+++ b/djangosite/home/templates/home/base.html
@@ -10,6 +10,10 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+  <script src="{% static 'd3/d3.js' %}"></script>
+  <script src="{% static 'd3/d3.layout.cloud.js' %}"></script>
+  <script src="{% static 'd3/d3.wordcloud.js' %}"></script>
+
   <title>Tech Job Post Analysis</title>
 
   <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}" />
