display all periodic tasks and retain task results

--- a/djangosite/home/templates/home/base.html
+++ b/djangosite/home/templates/home/base.html
@@ -29,6 +29,7 @@
     <footer>
       <a class="center-align" href="/">Query Jobposts</a> |
       <a class="center-align" href="/scraper">Scraper</a> |
+      <a class="center-align" href="/auto_scraper">Auto Scraper</a> |
       <a class="center-align" href="/skills">Skills</a> |
       <a class="center-align" href="/admin">Admin</a>
     </footer>
