--- a/djangosite/home/templates/home/manual_tasks.html
+++ b/djangosite/home/templates/home/manual_tasks.html
@@ -1,7 +1,6 @@
 {% extends 'home/base.html' %}
 {% block content %}
-
-<p>Select parameter set to scrape:</p>
+<p>Add entry to <a href="/admin/home/scraperparams/">Scraper Params table</a> for new manual task</p>
 
 <table>
   <tr>
@@ -32,8 +31,8 @@
     </tr>
   {% endfor %}
 </table>
-
 {% endblock %}
+
 
 {% block javascript %}
 <script>
