--- a/djangosite/home/templates/home/base.html
+++ b/djangosite/home/templates/home/base.html
@@ -8,37 +8,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- Jquery non-slim needed for Manual Task polling -->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+          integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+          crossorigin="anonymous"></script>
 
   <script src="{% static 'd3/d3.js' %}"></script>
   <script src="{% static 'd3/d3.layout.cloud.js' %}"></script>
   <script src="{% static 'd3/d3.wordcloud.js' %}"></script>
 
-  <title>Tech Job Post Analysis</title>
+  <title>Jobposts + Tasks</title>
 
   <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}" />
+
+  <!-- CSS and JS for Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <header class="container center-align">
-    <h3>Tech Job Post Analysis</h3>
-  </header>
+  <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-secondary">
+   <div class="container">
+    <a class="navbar-brand" href="/">Jobposts + Tasks</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+     <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Jobposts</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/all_tasks">All Tasks</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/manual_tasks">Manual Tasks</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/admin">Admin</a>
+      </li>
+     </ul>
+    </div>
+   </div>
+  </nav>
+
   <div class="container">
     {% block content %} {% endblock %}
-    <br><br>
-    <footer>
-      <a class="center-align" href="/">Query Jobposts</a> |
-      <a class="center-align" href="/scraper">Scraper</a> |
-      <a class="center-align" href="/auto_scraper">Auto Scraper</a> |
-      <a class="center-align" href="/skills">Skills</a> |
-      <a class="center-align" href="/admin">Admin</a>
-    </footer>
   </div>
 
-  <script
-			  src="https://code.jquery.com/jquery-3.2.1.min.js"
-			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-			  crossorigin="anonymous"></script>
   {% block javascript %} {% endblock %}
 </body>
 
