--- a/djangosite/home/templates/home/index.html
+++ b/djangosite/home/templates/home/index.html
@@ -1,29 +1,30 @@
 {% extends 'home/base.html' %}
 {% block content %}
+  {% load my_filters %}
 
-{% load my_filters %}
+  <h2>Search Jobposts</h2>
 
-<form action="" method="get">
+  <form action="" method="get">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Submit" />
-</form>
+    <input type="submit" value="Search" />
+  </form>
 
-<!-- <h4 class="center-align blue lighten-3">{{ title }}</h4> -->
-<div style="margin: 20px 0px 10px 0px; font-weight: bold;">{{ title }}</div>
+  <p>{{ intro }}</p>
+  <div id='wordcloud'></div>
+  <div>{{words}}</div>
+{% endblock %}
 
-<!-- https://github.com/wvengen/d3-wordcloud/blob/master/README.md -->
-<div id='wordcloud'></div>
-<script>
-  d3.wordcloud()
-    .size([800, 400])
-    .selector('#wordcloud')
-    .words({{words|safe}})
-    .scale('sqrt')
-    .spiral('archimedean')
-    .start();
-</script>
 
-<div>{{words}}</div>
-
+{% block javascript %}
+  <!-- https://github.com/wvengen/d3-wordcloud/blob/master/README.md -->
+  <script>
+    d3.wordcloud()
+     .size([800, 400])
+     .selector('#wordcloud')
+     .words({{words|safe}})
+     .scale('sqrt')
+     .spiral('archimedean')
+     .start();
+  </script>
 {% endblock %}
