--- a/djangosite/home/static/style.css
+++ b/djangosite/home/static/style.css
@@ -7,10 +7,14 @@ body { padding-top: 56px; }
 nav .container { padding: 0; }
 .navbar-brand { font-family: "Trebuchet MS", Helvetica, sans-serif; font-weight: bolder }
 
+form input, form select { margin: 0 5px 0 5px; }
+form label { padding-left: 5px; }
+
 table, th, td { border: 1px solid gray; border-collapse: collapse; padding: 0px 7px 2px 7px; } 
 table { margin-bottom: 20px; }
 
 .progressbar { background-color: #aaa; border-radius: 5px; width: 105px; }
 .bar-inner { background-color: #085; border-radius: 5px; }
 
-#skills-intro { float: left; margin-right: 10px; }
+.all_tasks { margin-bottom: 40px; }
+.warn { color: red; margin-bottom: 5px; }
