--- a/djangosite/home/templates/home/base.html
+++ b/djangosite/home/templates/home/base.html
@@ -40,10 +40,7 @@
         <a class="nav-link" href="/">Jobposts</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/all_tasks">All Tasks</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/manual_tasks">Manual Tasks</a>
+        <a class="nav-link" href="/all_tasks">Tasks</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/admin">Admin</a>
