--- a/djangosite/home/templates/home/base.html
+++ b/djangosite/home/templates/home/base.html
@@ -49,6 +49,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/admin">Admin</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/settings">Settings</a>
+      </li>
      </ul>
     </div>
    </div>
